--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,11 @@ a{
 	color: #3e484e;
 }
 
+section{
+	position: relative;
+	z-index: 1;
+}
+
 section h2{
 	font-family: ClanWeb-Book, sans-serif;	
 	font-size: 55px;
@@ -37,17 +42,11 @@ a.btn{
 	margin: 0 auto;
 }
 
-section#top{
+section#topo{
 	height: 75px;
 	overflow: auto;
 	padding: 35px 0 0px 0;
 	background: #FFF;
-	position: fixed;
-	top: 0;
-	width: 100%;
-	/*-webkit-box-shadow: 0px 2px 5px 0px rgba(50, 50, 50, 0.75);
-	-moz-box-shadow:    0px 2px 5px 0px rgba(50, 50, 50, 0.75);
-	box-shadow:         0px 2px 5px 0px rgba(50, 50, 50, 0.75);*/
 }
 
 a.logo{
@@ -70,7 +69,7 @@ nav a{
 }
 
 section#hero{
-	margin:115px 0 0 0;
+	/*margin:115px 0 0 0;*/
 	height: 480px;
 	background:url(../images/bg-hero.jpg) no-repeat center fixed;
 	-webkit-background-size: cover;
