Alt das imagens e acerto do h1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>O.S. Simples - Sistema de coontrole de ordem de serviço online</title>
+        <title>O.S. Simples - Sistema de controle de ordens de serviço online</title>
         <meta name="description" content="O.S. Simples - Sistema de Ordens de Serviço Online para Micro e Pequenas Empresas.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
