Botao de Like do Facebook

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,8 @@
                   <img src="assets/images/logo-mini.png">
               </a>
               <p>é desenvolvido pela <a href="http://www.webgoal.com.br" title="Webgoal">Webgoal</a></p>
+
+              <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="true" data-share="true" width="300" data-colorscheme="light"></div>
           </div>
       </section>
       
