--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,6 +110,11 @@ section#hero h3{
 	margin:20px 0 30px 0;
 }
 
+section#hero .fb-like{
+	margin: 15px 0 0 0;
+	color: #FFF;
+}
+
 section#hero h3 span{
 	font-family: ClanWeb-Medium, sans-serif;
 }
@@ -200,6 +205,11 @@ section#footer a{
 
 section#footer p{
 	margin:3px 0 0 0;
+}
+
+section#footer .fb-like{
+	float: right;
+	margin:-15px 0 0;
 }
 
 .logo-mini{
