Ajuste nos titulos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,10 @@ section#content .como-funciona p{
 	font-size: .8em;
 }
 
+section#content .como-funciona span{
+	display: block;
+}
+
 section#content .facilidades ul{
 	list-style: none;
 }
