otimizacao dos css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,7 @@
         <meta name="description" content="O.S. Simples - Sistema de Ordens de Serviço Online para Micro e Pequenas Empresas.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/fonts.css">
-        <link rel="stylesheet" href="assets/css/struture.css">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/default.css">
 
         <link href="favicon.png" rel="icon" sizes="32x32" type="image/x-icon" />
         
@@ -57,5 +54,14 @@
           ga('create', 'UA-46595816-3', 'ossimples.com.br');
           ga('send', 'pageview');
       </script>
+
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
     </body>
 </html>
