--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,8 +110,8 @@ section#hero h3{
 	margin:20px 0 30px 0;
 }
 
-section#hero .fb-like{
-	margin: 15px 0 0 0;
+.container.fb .fb-like{
+	margin: 20px 0 0 0;
 	color: #FFF;
 }
 
