--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -223,7 +223,7 @@ section#footer .fb-like{
 
 .thanks{
 	min-height: 600px;
-	background: url(../images/thanks.jpg) no-repeat;
+	background: url(../images/bg-thanks.jpg) no-repeat;
 	background-size: cover;
 	text-align: center;	
 }
