--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,7 +18,7 @@
         <script src="{{site.baseurl}}/assets/js/scroll.js"></script>
         <script src="{{site.baseurl}}/assets/js/modernizr-2.6.2.min.js"></script>
         <script src="{{site.baseurl}}/assets/js/script.js"></script>
-        <script src="{{site.baseurl}}/assets/js/track.home.js"></script>
+        
 
         <!-- start Mixpanel -->
         <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
@@ -28,34 +28,16 @@
         <!-- end Mixpanel -->
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-      <section id="topo">
-          <div class="container">
-              <h1><a class="logo" href="/" title="o.s. simples">O.S. Simples - Sistema de controle de ordens de serviço online</a></h1>
-              <nav>
-                  <a href="#como-funciona" title="Como funciona?" class="como_funciona">Como funciona?</a>
-                  <a href="#funcionalidades" title="Funcionalidades" class="funcionalidades">Funcionalidades</a>
-                  <a href="{{ site.baseurl }}/blog.html" title="Blog" class="funcionalidades"><span class="blog">Blog</span></a>
-                  <a href="#form" title="Cadastre-se" class="cadastre_se"><span>Cadastre-se</span></a>
-              </nav>
-          </div>
-      </section>
-
-      {{ content }}
-
-      <section id="footer">
-          <div class="container">
-              <a class="logo-mini" href="#topo" title="o.s. simples">
-                  <img src="{{site.baseurl}}/assets/images/logo-mini.png">
-              </a>
-              <p>é desenvolvido pela <a href="http://www.webgoal.com.br" title="Webgoal">Webgoal</a></p>
-
-              <div class="fb-like" data-href="https://www.facebook.com/sistemaossimples" data-layout="standard" data-action="like" data-show-faces="false" data-share="true" width="300" data-colorscheme="light"></div>
-          </div>
-      </section>
+    	<div class="grid-4 sidebar">
+    		<h1><a class="logo" href="{{site.baseurl}}/blog.html" title="o.s. simples">O.S. Simples - Sistema de controle de ordens de serviço online</a></h1>
+    		<p class="call-to-action">
+    			Ainda não se cadastrou no o.s. simples? <a href="/" title="Sistema de ordens de serviço online">www.ossimples.com.br</a>
+    		</p>
+    	</div>
+    	<div class="grid-8 wrap">
+    		{{ content }}
+    	</div>
       
       <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -67,13 +49,5 @@
           ga('send', 'pageview');
       </script>
 
-      <div id="fb-root"></div>
-      <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
     </body>
 </html>
