--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,46 @@
 ---
-layout: default
+layout: main
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
+<script>
+	$(document).ready(function(){
+		$('.hero').css('background-image', 'url('+$('img:#hero').attr('src')+')');
+		$('.author').css('background-image', 'url('+$('img:#author').attr('src')+')');
+	});
+</script>
+
+<div class="hero">
+	<div class="container">
+		<h1><a class="logo" href="{{site.baseurl}}/blog.html" title="o.s. simples">O.S. Simples - Sistema de controle de ordens de serviço online</a></h1>
+	</div>
+</div>
+
+<div class="container">
+	<div class="grid-2">
+		<div class="author"></div>
+		<span class="date"><span>Publicado</span><br>{{ page.date | date_to_string }}</span>
+	</div>
+	<div class="grid-8">
+		<article>
+			<h3>{{ page.title }}</h3>
+			{{ content }}
+		</article>
+		
+		{{ % if page.comments % }}
+		    <div id="disqus_thread"></div>
+		    <script type="text/javascript">
+		        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+		        var disqus_shortname = 'estoquesimples'; // required: replace example with your forum shortname
+
+		        /* * * DON'T EDIT BELOW THIS LINE * * */
+		        (function() {
+		            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		        })();
+		    </script>
+		    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+		{{ % endif % }}
+	</div>
 </div>
