Link para o sistema

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
                   <a href="#como-funciona" title="Como funciona?" class="como_funciona">Como funciona?</a>
                   <a href="#funcionalidades" title="Funcionalidades" class="funcionalidades">Funcionalidades</a>
                   <a href="{{ site.baseurl }}/blog.html" title="Blog" class="funcionalidades"><span class="blog">Blog</span></a>
-                  <a href="#form" title="Cadastre-se" class="cadastre_se"><span>Cadastre-se</span></a>
+                  <a href="http://sistema.ossimples.com.br/users/sign_up" title="Cadastre-se" class="cadastre_se"><span>Cadastre-se</span></a>
               </nav>
           </div>
       </section>
